# aws-vuessg-fastapi-sample

./: .dockerignore  .gitignore  README.md  compose.prod.yaml  compose.yaml
assets/: aws-python-vue-sample.drawio
cdk/: .env.example  Dockerfile  README.md  cdk.context.json  cdk.json  compose.yaml  package-lock.json  package.json
cdk/lib/: alb-stack.ts  api-gateway-stack.ts  app-constants.ts  app-stage.ts  backend-stack.ts  debug-stack.ts  frontend-stack.ts  index.html  python-app-stack.ts  unified-stack.ts  vpc-stack.ts  vue-app-stack.ts
cdk/lib/constructs/: alb.ts  api-gateway.ts  backend.ts  debug.ts  frontend.ts  vpc.ts
cdk/lib/stacks/: application-stack.ts  debug-stack.ts  vpc-stack.ts
nginx/: README.md  nginx.conf
pythonapp/: Dockerfile  README.md  app.py  pyproject.toml
pythonapp/common/schemas/: base.py  sample_form.py
pythonapp/core/: logging_config.py  middleware.py
pythonapp/modules/sample_form/: routers.py
pythonapp/tests/: conftest.py
pythonapp/tests/modules/sample_form/: test_routers.py
vueapp/: Dockerfile  README.md  error.vue  nginx.conf  nuxt.config.ts  package-lock.json  package.json  start-dev.sh  vitest.config.ts
vueapp/.output/: nitro.json
vueapp/.output/public/: 200.html  404.html  _payload.json  index.html
vueapp/assets/css/: main.css
vueapp/components/common/: AppBreadcrumbs.vue  AppButton.vue  AppDialog.vue  AppFooter.vue  AppHeader.vue  (+1 more)
vueapp/composables/: useTraceId.ts
vueapp/layouts/: default.vue
vueapp/pages/: index.vue  sample.vue
vueapp/plugins/: logging.ts
vueapp/types/: http.ts  index.ts
(+23 files in other folders)
