[project]
name = "fastapi-app"
version = "0.1.0"

dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "httpx==0.27.0",
    "pydantic==2.8.2",
    "python-multipart==0.0.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
